<resources>
    <string name="app_name">点播终端</string>

    <string name="local_play">本地点播</string>
    <string name="remote_play">远程点播</string>
    <string name="video_play">视频点播</string>
    <string name="about_us">关于我们</string>
    <string name="call_back">呼叫对讲</string>
    <string name="time_broadcast">定时广播</string>
    <string name="real_time">实时采播</string>
    <string name="system_set">系统设置</string>
    <string name="terminationstate">终端状态</string>
    <string name="userstate">呼叫主机</string>
    <string name="timing">定时节目</string>
    <string name="manage">节目管理</string>
    <string name="exit_call">退出\n呼叫主机</string>
    <string name="video">通话录像</string>
    <string name="record">对讲记录</string>
    <string name="setting">基本设置</string>
    <string name="setting_annotation">基本设置 [设置各种系统参数]</string>
    <string name="vession">烽火科技\n高清可视语音系统</string>
    <string name="control">管理主机</string>
    <string name="version1">版本:V</string>
    <string name="basicsetting">基本设置\n(必填)</string>
    <string name="advancedsetting">高级设置</string>
    <string name="bind_card">绑定网卡</string>
    <string name="address">地址</string>
    <string name="effect">生效</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="servers_address">服务器地址</string>
    <string name="regsiter">注册</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="log_out">注销</string>
    <string name="operation_state">运行状态 [查看终端及工作站运行时的各种状态]</string>
    <string name="check">查看终端:</string>
    <string name="terminal">终端</string>
    <string name="user">用户</string>
    <string name="all_zone">全部分区</string>
    <string name="unzone">未分区</string>
    <string name="open_talkback">开启对讲</string>
    <string name="close_talkback">关闭对讲</string>
    <string name="cancel">取消</string>
    <string name="talk_over">挂断</string>
    <string name="open_access">开启门禁</string>
    <string name="close_access">关闭门禁</string>
    <string name="propaganda">喊话</string>
    <string name="check_task">查看任务:</string>
    <string name="task">任务</string>
    <string name="choose_terminal">选择终端</string>
    <string name="state">状态</string>
    <string name="working_time">运行时间</string>
    <string name="timing_type">定时类型</string>
    <string name="file_length">文件总长</string>
    <string name="file_length_">文件总长:</string>
    <string name="random_play">随机播放</string>
    <string name="volume_adjust">音量微调</string>
    <string name="add_task">添加任务</string>
    <string name="edit_task">编辑任务</string>
    <string name="delete_task">删除任务</string>
    <string name="hand_execute">手动执行</string>
    <string name="hand_stop">手动停止</string>
    <string name="all_task">全部任务</string>
    <string name="day_task">每天任务</string>
    <string name="week_task">每周任务</string>
    <string name="once_task">一次任务</string>
    <string name="add_ring_task">添加打铃任务</string>
    <string name="edit_ring_task">编辑打铃任务</string>
    <string name="goal">目标</string>
    <string name="guangzhou">广州</string>
    <string name="property">属性</string>
    <string name="task_name">任务名称:</string>
    <string name="belong_project">所属方案:</string>
    <string name="timing_setting">定时设置:</string>
    <string name="frequency_length">音频时长:</string>
    <string name="detail_time">时间详情:</string>
    <string name="file_list">文件列表</string>
    <string name="expand_property">扩展属性</string>
    <string name="control_signal">同步控制强切信号</string>
    <string name="control_power">仅控制功放电源</string>
    <string name="call_police">开启喧哗报警</string>
    <string name="police_volume">报警音量</string>
    <string name="current_volume">当前报警音:</string>
    <string name="volume_trimming">音量微调: </string>
    <string name="confirm">确定</string>
    <string name="reminder">提示:任务正在执行中,不能按[确定]键修改任务!</string>
    <string name="warn">提示</string>n
    <string name="excute_task">任务正在执行中,请稍后再尝试\n删除</string>
    <string name="setting_time">设置时间</string>
    <string name="refresh">刷新</string>
    <string name="add_dir">添加目录</string>
    <string name="add_file">添加文件</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="name">名称</string>
    <string name="file_extend">文件长度</string>
    <string name="start_date">开始日期:</string>
    <string name="end_date">结束日期:</string>
    <string name="call_object">通话对象:</string>
    <string name="timing_task">任务定时设置</string>
    <string name="task_type">任务类型:</string>
    <string name="excute_time">执行时间:</string>
    <string name="continu_time">持续时间:</string>
    <string name="week_check">星期选择</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="confirm_time">指定该项</string>
    <string name="monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期七</string>
    <string name="add">添加</string>
    <string name="real_time_stop">停止采播</string>
    <string name="real_time_start">开始采播</string>
    <string name="online_calling">在线呼叫</string>
    <string name="online_calling_phone">呼叫手机</string>
    <string name="please_choose_call">选择呼叫方式</string>

    <string name="please_add_terminal">请添加终端</string>
    <string name="real_time_talk">实时讲话</string>
    <string name="task_broadcast_name">任务名称</string>
    <string name="task_broadcast_state">运行状态</string>

    <string name="new_task">新建</string>
    <string name="menu">菜单</string>
    <string name="back">返回</string>
    <string name="music_loading">歌曲正在下载中</string>
    <string name="error">该播放器不支持这种音频文件类型</string>
    <string name="move_up">上移</string>
    <string name="move_down">下移</string>
    <string name="audition">试听</string>
    <string name="file_name">文件名</string>
    <string name="search_scope">查找范围</string>
    <string name="catalog">目录</string>
    <string name="file">文件</string>
    <string name="edit_directory">请输入目录名</string>
    <string name="edit_file">请输入文件名</string>
    <string name="ensure">确定</string>
    <string name="programs">节目库</string>
    <string name="new_file">新建文件夹</string>
    <string name="delete_toast">请先在列表中选中一行</string>
    <string name="ensure_delete">请问是否确认删除</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="toast_username">用户名不能为空</string>
    <string name="toast_password">密码不能为空</string>
    <string name="toast_address">服务器地址不能为空</string>
    <string name="on_line">在线</string>
    <string name="on_line_one">(在线)</string>
    <string name="plase_login">请先登入</string>
    <string name="exit_login">再按一次退出程序</string>
    <string name="login_success">登入成功</string>
    <string name="login_failed">注销成功或登入失败</string>
    <string name="off_line">离线</string>
    <string name="off_line_one">(离线)</string>
    <string name="server_close">服务器连接失败</string>
    <string name="edittask">编辑任务列表</string>
    <string name="everyday">每天</string>
    <string name="everyweek">每周</string>
    <string name="talk_speak_notallow">对讲喊话不能同时进行</string>
    <string name="once">一次</string>
    <string name="open_speak">开启喊话</string>
    <string name="close_speak">关闭喊话</string>
    <string name="talking">对讲中</string>
    <string name="playing">播放</string>
    <string name="talk_play">对讲播放</string>
    <string name="task_started">该任务已手动执行</string>
    <string name="task_free">该任务未执行</string>
    <string name="task_failed">该任务执行失败</string>
    <string name="duration">持续</string>
    <string name="from">起</string>
    <string name="to">到</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
    <string name="exc">执行</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="Prompt">提示</string>
    <string name="select_one">请选中一行</string>
    <string name="check_syear">请检查开始年份是否输入正确</string>
    <string name="check_smonth">请检查开始月份是否输入正确</string>
    <string name="check_sday">请检查开始日期是否输入正确</string>
    <string name="check_eyear">请检查结束年份是否输入正确</string>
    <string name="check_emonth">请检查结束月份是否输入正确</string>
    <string name="check_eday">请检查结束日期是否输入正确</string>
    <string name="check_ehour">请检查执行时间是否输入正确</string>
    <string name="check_emin">请检查执行时间是否输入正确</string>
    <string name="check_esec">请检查执行时间是否输入正确</string>
    <string name="check_etime">请检查持续时间是否输入正确</string>
    <string name="select_terms">请选择执行任务的终端</string>
    <string name="edit_taskname">请输入任务名称</string>
    <string name="task_excute_time">请设置任务执行时间</string>
    <string name="task_music">请选择任务执行音乐</string>
    <string name="owner">所有者</string>
    <string name="runtime">运行时间</string>
    <string name="ran">随机播放</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="nrun">未运行</string>
    <string name="eweek">每周</string>
    <string name="hand">手动执行</string>
    <string name="auto">自动执行</string>
    <string name="music_lib_file">音乐库文件</string>
    <string name="calling">呼叫中</string>
    <string name="term_busy">终端正忙</string>
    <string name="user_busy">用户正忙</string>
    <string name="incalling">正在呼叫:主机</string>
    <string name="user_">号主机</string>
    <string name="inanswer">正在呼叫您</string>
    <string name="refuse">拒绝</string>
    <string name="answer">接听</string>
    <string name="transfer">转移</string>
    <string name="version">版本:v</string>
    <string name="hang_up">挂断</string>
    <string name="switch_camera">切换前后</string>
    <string name="exit_procedure">退出程序</string>
    <string name="lost_connection">已掉线,重连中</string>
    <string name="are_you_sure">确定要永久删除此歌曲吗</string>
    <string name="net_connect_failure">网络连接失败,请检查网络状态</string>
    <string name="please_goto_login">请去系统设置界面登入</string>
    <string name="all_select">全选</string>
    <string name="selected">已选中</string>
    <string name="song">首歌</string>
    <string name="server_connect_failure">服务器连接失败</string>
    <string name="check_username_password">请检查用户名或密码是否正确</string>
    <string name="add_task_failure">添加任务失败</string>
    <string name="edit_task_failure">编辑任务失败</string>
    <string name="delete_task_failure">删除任务失败</string>
    <string name="handler_start_failure">手动执行失败</string>
    <string name="handler_stop_failure">手动停止失败</string>
    <string name="waiting_response">正在等待对方应答</string>
    <string name="iscalling">正在呼叫您</string>
    <string name="user_call">用户正在呼叫您</string>
    <string name="term_call">终端正在呼叫您</string>
    <string name="opposite_busy">对方正忙</string>
    <string-array name="volume">
        <item>0</item>
        <item>+ 5</item>
        <item>+ 4</item>
        <item>+ 3</item>
        <item>+ 2</item>
        <item>+ 1</item>
        <item>- 1</item>
        <item>- 2</item>
        <item>- 3</item>
        <item>- 4</item>
        <item>- 5</item>
    </string-array>
    <string-array name="task_type">
        <item>@string/all_task</item>
        <item>@string/day_task</item>
        <item>@string/week_task</item>
        <item>@string/once_task</item>
    </string-array>
</resources>
