<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:layout_height="60dp">
    <TextView
        android:id="@id/btn_back"
        android:src="@drawable/titlebar_btn_back"
        android:text="@string/back"
        android:gravity="center_vertical"
        android:textSize="23sp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="match_parent"/>

   <LinearLayout
       android:layout_width="0dp"
       android:layout_weight="1"
       android:orientation="vertical"

       android:layout_height="match_parent">
       <ImageView
           android:src="@drawable/new_task"
           android:layout_width="43dp"
           android:layout_height="43dp" />
       <TextView
           android:layout_gravity="center_horizontal"
           android:textColor="@color/black"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/new_task"
           />
   </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="4dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/task_menu"
            android:layout_width="43dp"
            android:layout_height="43dp" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/menu"
            />
    </LinearLayout>
</LinearLayout>