<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.administrator.android_sta_vod.MainActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tv_sta_vod_state"
        android:text=""
        android:layout_gravity="center"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout

        android:id="@+id/ll_main_"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="4"
        >

        <LinearLayout
            android:id="@+id/main_ll_local"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/bendiplay"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/local_play"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_remote"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/yuancheng"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/remote_play"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_videoplay"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/videoplay"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                android:text="@string/video_play"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_aboutus"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/aboutus"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_us"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout

        android:id="@+id/ll_main_11"
        android:layout_below="@+id/ll_main_"
android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/main_ll_call"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/callback"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/call_back"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_broadercast"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/broadcast"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/time_broadcast"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_real_time"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/colsephone"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/real_time"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_ll_system"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/system"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                android:text="@string/system_set"/>
        </LinearLayout>
    </LinearLayout>

        <ImageView
            android:layout_weight="2"
            android:layout_marginBottom="18dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>
