<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_term_userid"
            style="@style/wrap_textview"
            android:text="user_id"
            android:textSize="30sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView style="@style/wrap_textview"
                android:text="@string/inanswer"
                android:textSize="23sp"/>
            <ImageView
                android:id="@+id/iv_dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dot"/>
            <ImageView
                android:id="@+id/iv_dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dot"/>
            <ImageView
                android:id="@+id/iv_dot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dot"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_term_refuse"
                style="@style/wrap_button"
                android:background="@mipmap/hangup"
                android:textSize="23sp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                style="@style/wrap_textview"
                android:text="@string/refuse"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_term_answer"
                style="@style/wrap_button"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/answer"
                android:textSize="23sp"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                style="@style/wrap_textview"
                android:text="@string/answer"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>