<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.Remote_play_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:gravity="center_vertical"
        android:background="@color/MediumSpringGreen">
        <ImageView
            android:id="@+id/iv_up"
            android:layout_margin="15dp"
            android:src="@drawable/up"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <ImageView
            android:layout_margin="15dp"
            android:id="@+id/iv_down"
            android:src="@drawable/down"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/iv_up"
            android:layout_centerVertical="true"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:id="@+id/tv_all_select"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/all_select"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <RelativeLayout

           android:layout_alignParentRight="true"
           android:background="@drawable/search_box"
           android:gravity="center_vertical"
           android:focusable="true"
           android:focusableInTouchMode="true"
           android:layout_marginTop="24dp"
           android:layout_marginRight="40dp"
           android:layout_width="300dp"
           android:layout_height="45dp">

           <ImageView
               android:id="@+id/iv_search"
               android:src="@drawable/search"
               android:clickable="true"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp"
               android:layout_toRightOf="@+id/et_search"
               android:layout_centerVertical="true"
               android:layout_width="45dp"
               android:layout_height="45dp"/>
           <EditText
               android:id="@+id/et_search"
               android:singleLine="true"
               android:layout_marginLeft="30dp"
               android:layout_centerVertical="true"
               android:layout_width="220dp"
               android:layout_height="wrap_content"
               android:textSize="20sp"
               android:imeOptions="actionSearch"
               android:layout_alignParentTop="true"
               />
           <ImageView
               android:id="@+id/iv_clear"
               android:clickable="true"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:layout_toRightOf="@+id/et_search"
               android:layout_centerVertical="true"
               android:visibility="gone"
               android:src="@drawable/clear"
               android:layout_width="45dp"
               android:layout_height="45dp"/>
       </RelativeLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_addmusic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_sel"
            android:text=""
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:textSize="18sp"
            android:text="@string/confirm"
            android:clickable="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
